--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 :root {
   --foreground-rgb: 255, 255, 255;
@@ -13,6 +12,16 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, rgb(var(--background-start-rgb)), rgb(var(--background-end-rgb)));
   min-height: 100vh;
+  font-family: var(--font-inter), sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-poppins), sans-serif;
 }
 
 .gradient-text {
@@ -25,5 +34,9 @@ body {
 
 .neon-glow {
   text-shadow: 0 0 5px #ff00ff, 0 0 10px #ff00ff, 0 0 15px #ff00ff, 0 0 20px #ff00ff;
+}
+
+.lobster-font {
+  font-family: var(--font-lobster), cursive;
 }
 
